# HackPera

./: README.md  package-lock.json
ticketproof-contract/: Cargo.toml  package-lock.json
ticketproof-contract/.stellar/contract-ids/: ticketproof.json
ticketproof-contract/.stellar/identity/: default.toml
ticketproof-contract/src/: lib.rs
ticketproof-frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js
ticketproof-frontend/src/: App.jsx  main.jsx
ticketproof-frontend/src/components/: Layout.jsx
ticketproof-frontend/src/pages/: CreateEventPage.tsx  EventDetailsPage.jsx  EventsPage.jsx  MyTicketsPage.tsx  ValidatorPage.tsx  WalletContext.jsx
ticketproof-frontend/src/queries/: fetchEvents.js
